--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
   <title>Movies search</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: #001a33;">
   <app-root>
     <div class="ui segment">
       <div class="ui active inverted dimmer">
-      </div>
+        </div>
     </div>
   </app-root>
 </body>
